apps/base/paseo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paseo
  labels:
    app.kubernetes.io/name: paseo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6767
      targetPort: 6767
      protocol: TCP
  selector:
    app.kubernetes.io/name: paseo
