apps/base/paseo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paseo
  namespace: paseo
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - paseo.nathan-fouere.com
  rules:
    - backendRefs:
        - name: paseo
          port: 6767
